<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Signup">


    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/top_background1"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textSize="40sp"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#6672FF" />


            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:autofillHints=""
                android:hint="@string/email"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:textColor="#6672FF"
                android:textColorHint="#6672FF"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/emai"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"
                tools:ignore="RtlSymmetry"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/lock"
                    android:hint="@string/password"
                    android:paddingStart="10dp"
                    android:inputType="textPassword"
                    android:textColor="#6672FF"
                    android:textColorHint="#6672FF"
                    tools:ignore="RtlSymmetry"  />

                <ImageView
                    android:id="@+id/imageViewShowPassword"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignEnd="@id/passwordEditText"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/toggle_password_visibility"
                    android:src="@drawable/hid" />

            </RelativeLayout>


            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:backgroundTint="#6672FF"
                android:textColor="@color/white"
                android:paddingBottom="8dp"
                android:layout_margin="8dp"
                android:textAllCaps="false"
                android:textSize="16sp"  />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_log_in"
                android:layout_gravity="center"
                android:textColor="#6672FF"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="15dp" />

        </LinearLayout>

</LinearLayout>