<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/analyzing"
        android:textAlignment="center"
        android:textColor="#6672FF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/progressIndicator"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/multi_color_progress" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextUrdu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:gravity="top"
                android:textColorHint="#6672FF"
                android:textDirection="rtl"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:background="@drawable/edittext_background"
                android:padding="10dp"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/btnPredict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="#6672FF"
                android:text="@string/predict"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewPredictionResult"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:text="Prediction Result will be shown here"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
